grammar.js
    program: ($) =>
      seq(
        optional(
          choice(
            seq($.requires_directive_list, optional($.using_directive_list)),
            seq($.using_directive_list, optional($.requires_directive_list)),
          ),
        ),
        optional($.param_block),
        optional($.statement_list),
      ),

    integer_literal: ($) =>
      choice($.decimal_integer_literal, $.hexadecimal_integer_literal),

    decimal_integer_literal: ($) =>
      token(
        seq(
          psDecimalDigits(),
          optional(/[yY]|[uU][yYsSlL]|[uUsSdDnNlL]/),
          optional(/[kKmMgGtTpP][bB]/),
        ),
      ),

    string_literal: ($) =>
      choice(
        $.expandable_string_literal,
        $.verbatim_string_characters,
        $.expandable_here_string_literal,
        $.verbatim_here_string_characters,
      ),

    _expandable_string_content: ($) =>
      choice(
        $._expandable_string_immcontent,
        $.variable,
        $.sub_expression,
        token.immediate(psDollarLiteral()),
        token.immediate(/`.{1}|`\r?\n/),
        token.immediate('""'),
        token.immediate('$'),
      ),

    _expandable_string_leading_text: () => token(seq('"', /[^\$\"`]+|""/)),

    _expandable_string_leading_literal_dollar: () =>
      token(seq('"', psDollarLiteral())),

    expandable_string_literal: ($) =>
      prec(
        1,
        choice(
          seq(
            choice(
              $._expandable_string_leading_text,
              $._expandable_string_leading_literal_dollar,
              seq('"', $.variable),
              seq('"', $.sub_expression),
              seq('"', token.immediate(/`.{1}|`\r?\n/)),
              seq('"', token.immediate('""')),
              seq('"', token.immediate('$')),
            ),
            repeat($._expandable_string_content),
            token.immediate('"'),
          ),
          '""',
        ),
      ),

    verbatim_string_characters: ($) =>
      token(seq('\'', repeat(choice(/[^']+/, '\'\'')), '\'')),

    simple_name: ($) => psIdentifier(),

    // Type names
    assignment_operator: ($) =>
      choice('=', '!=', '+=', '*=', '/=', '%=', '-=', '??='),

    comparison_operator: ($) =>
      choice(
        reservedWord('-as'),
        reservedWord('-ccontains'),
        reservedWord('-ceq'),
        reservedWord('-cge'),
        reservedWord('-cgt'),
        reservedWord('-cle'),
        reservedWord('-clike'),
        reservedWord('-clt'),
        reservedWord('-cmatch'),
        reservedWord('-cne'),
        reservedWord('-cnotcontains'),
        reservedWord('-cnotlike'),
        reservedWord('-cnotmatch'),
        reservedWord('-contains'),
        reservedWord('-creplace'),
        reservedWord('-csplit'),
        reservedWord('-eq'),
        reservedWord('-ge'),
        reservedWord('-gt'),
        reservedWord('-icontains'),
        reservedWord('-ieq'),
        reservedWord('-ige'),
        reservedWord('-igt'),
        reservedWord('-ile'),
        reservedWord('-ilike'),
        reservedWord('-ilt'),
        reservedWord('-imatch'),
        reservedWord('-in'),
        reservedWord('-ine'),
        reservedWord('-inotcontains'),
        reservedWord('-inotlike'),
        reservedWord('-inotmatch'),
        reservedWord('-ireplace'),
        reservedWord('-is'),
        reservedWord('-isnot'),
        reservedWord('-isplit'),
        reservedWord('-join'),
        reservedWord('-le'),
        reservedWord('-like'),
        reservedWord('-lt'),
        reservedWord('-match'),
        reservedWord('-ne'),
        reservedWord('-notcontains'),
        reservedWord('-notin'),
        reservedWord('-notlike'),
        reservedWord('-notmatch'),
        reservedWord('-replace'),
        reservedWord('-shl'),
        reservedWord('-shr'),
        reservedWord('-split'),
      ),

    variable: ($) =>
      choice(
        '$$',
        '$^',
        '$?',
        '$_',
        token(
          seq(
            '$',
            optional(
              seq(
                choice(
                  reservedWord('global:'),
                  reservedWord('local:'),
                  reservedWord('private:'),
                  reservedWord('script:'),
                  reservedWord('using:'),
                  reservedWord('workflow:'),
                  psVariablePart(),
                ),
                ':',
              ),
            ),
            choice(psVariablePart(), '?'),
          ),
        ),
        token(
          seq(
            '@',
            optional(
              seq(
                choice(
                  reservedWord('global:'),
                  reservedWord('local:'),
                  reservedWord('private:'),
                  reservedWord('script:'),
                  reservedWord('using:'),
                  reservedWord('workflow:'),
                  psVariablePart(),
                ),
                ':',
              ),
            ),
            choice(psVariablePart(), '?'),
          ),
        ),
        $.braced_variable,
      ),

    generic_token: ($) =>
      token(/[^\(\)\$\"\'\-\{\}@\|\[`\&\s][^\&\s\(\)\}\|;,]*/),

    // Command-argument fragments stop before interpolation or quoted-string
    // starts so adjacent native arguments like `/flag:"$($x)"` can concatenate.
    _command_argument_token: () =>
      token(/[^\(\)\$\"\'\-\{\}@\|\[`\&\s][^\&\s\(\)\}\|;,\$\"\'`]*/),

    // Command-mode status prefixes like `[!]` are generic arguments, not
    // type literals. Keep this to punctuation-only content so `[int]` still
    // takes the type_literal path.
    escape_character: ($) =>
      token(seq(/`[^\r\n]/, repeat(choice(/`[^\r\n]/, /[^\&\s\(\)\}\|;,`]+/)))),

    command_parameter: ($) =>
      token(choice(seq(/-+/, psRegex(`[${PS_PARAMETER_FIRST_CHARS}][${PS_PARAMETER_FOLLOW_CHARS}]*`)), '--')),

    script_block: ($) =>
      choice(
        field('script_block_body', $.script_block_body),
        seq(
          seq($.param_block, $._statement_boundary, repeat(';')),
          field('script_block_body', optional($.script_block_body)),
        ),
      ),

    script_block_body: ($) =>
      choice(
        field('named_block_list', $.named_block_list),
        field('statement_list', $.statement_list),
      ),

    statement_block: ($) =>
      seq('{', field('statement_list', optional($.statement_list)), '}'),

    statement_list: ($) => repeat1($._statement),

    _statement: ($) =>
      prec.right(
        choice(
          $.if_statement,
          seq(optional($.label), $._labeled_statement),
          $.function_statement,
          $.class_statement,
          $.enum_statement,
          $.attribute_statement,
          seq($.flow_control_statement, $._statement_boundary),
          $.trap_statement,
          $.try_statement,
          $.data_statement,
          $.inlinescript_statement,
          $.parallel_statement,
          $.sequence_statement,
          seq($.pipeline, $._statement_boundary),
          $.empty_statement,
        ),
      ),

    empty_statement: ($) => prec(PREC.EMPTY, ';'),

    if_statement: ($) =>
      prec.left(
        seq(
          reservedWord('if'),
          '(',
          field('condition', $.pipeline),
          ')',
          $.statement_block,
          field('elseif_clauses', optional($.elseif_clauses)),
          field('else_clause', optional($.else_clause)),
        ),
      ),

    elseif_clauses: ($) => prec.left(repeat1($.elseif_clause)),

    elseif_clause: ($) =>
      seq(
        reservedWord('elseif'),
        '(',
        field('condition', $.pipeline),
        ')',
        $.statement_block,
      ),

    else_clause: ($) => seq(reservedWord('else'), $.statement_block),

    switch_statement: ($) =>
      seq(
        reservedWord('switch'),
        optional($.switch_parameters),
        $.switch_condition,
        $.switch_body,
      ),

    switch_parameters: ($) => repeat1($.switch_parameter),

    switch_parameter: ($) =>
      choice(
        reservedWord('-regex'),
        reservedWord('-wildcard'),
        reservedWord('-exact'),
        reservedWord('-casesensitive'),
        reservedWord('-parallel'),
      ),

    switch_condition: ($) =>
      choice(
        seq('(', $.pipeline, ')'),
        seq(reservedWord('-file'), $.switch_filename),
      ),

    switch_body: ($) => seq('{', optional($.switch_clauses), '}'),

    switch_clauses: ($) => repeat1($.switch_clause),

    switch_clause: ($) =>
      seq(
        $.switch_clause_condition,
        $.statement_block,
        $._statement_boundary,
        repeat(';'),
      ),

    switch_clause_condition: ($) =>
      choice($._primary_expression, $._switch_condition_token),

    _switch_condition_token: ($) =>
      token(/[^\(\)\{\}\[\]\$\@\.`\s;\&"'][^\(\)\{\}\s;\&]*/),

    flow_control_statement: ($) =>
      choice(
        seq(reservedWord('break'), optional($.label_expression)),
        seq(reservedWord('continue'), optional($.label_expression)),
        seq(reservedWord('throw'), optional($.pipeline)),
        seq(reservedWord('return'), optional($.pipeline)),
        seq(reservedWord('exit'), optional($.pipeline)),
      ),

    pipeline: ($) =>
      choice(
        $.assignment_expression,
        $._pipeline,
      ),

    _pipeline: ($) =>
      seq(
        $.pipeline_chain,
        repeat(seq($.pipeline_chain_tail, $.pipeline_chain)),
      ),

    pipeline_chain: ($) =>
      choice(
        seq(
          $._expression,
          optional($.redirections),
          optional($._pipeline_tail),
        ),
        seq(
          $.command,
          optional($.verbatim_command_argument),
          optional($._pipeline_tail),
        ),
      ),

    left_assignment_expression: ($) => $._expression,

    assignment_expression: ($) =>
      seq(
        $.left_assignment_expression,
        $.assignment_operator,
        field('value', $._assignment_value),
      ),

    _assignment_value: ($) =>
      prec.right(
        choice(
          $.if_statement,
          seq(optional($.label), $._labeled_statement),
          $.function_statement,
          $.class_statement,
          $.enum_statement,
          $.attribute_statement,
          $.flow_control_statement,
          $.trap_statement,
          $.try_statement,
          $.data_statement,
          $.inlinescript_statement,
          $.parallel_statement,
          $.sequence_statement,
          $.assignment_expression,
          alias($._pipeline, $.assignment_value),
        ),
      ),

    _pipeline_tail: ($) => repeat1(seq('|', $.command)),

    command: ($) =>
      choice(
        seq(
          field('command_name', $.command_name),
          field('command_elements', optional($.command_elements)),
        ),
        seq(
          $.command_invocation_operator,
          // optional($.command_module),
          field('command_name', $.command_name_expr),
          field('command_elements', optional($.command_elements)),
        ),
      ),

    _expandable_string_literal_immediate: ($) =>
      seq(
        repeat(
          choice(
            /[^\$"`]+/,
            $.variable,
            psDollarLiteral(),
            /`.{1}|`\r?\n/,
            '""',
            $.sub_expression,
            '$',
          ),
        ),
        '"',
      ),

    command_name: ($) =>
      seq(
        choice(
          /[^\{\}\(\);,\|\&`"'\s\r\n\[\]\+\-\$@<\!]+/,
          // tree-sitter does not allow to control lexer
          // each start keyword into _statement rule must be present here
          // https://github.com/airbus-cert/tree-sitter-powershell/issues/24
          new RegExp(caseInsensitive('break-')),
          new RegExp(caseInsensitive('continue-')),
          new RegExp(caseInsensitive('throw-')),
          new RegExp(caseInsensitive('return-')),
          new RegExp(caseInsensitive('exit-')),
          new RegExp(caseInsensitive('try-')),
          new RegExp(caseInsensitive('trap-')),
          new RegExp(caseInsensitive('if-')),
          new RegExp(caseInsensitive('function-')),
          new RegExp(caseInsensitive('filter-')),
          new RegExp(caseInsensitive('workflow-')),
          new RegExp(caseInsensitive('class-')),
          new RegExp(caseInsensitive('enum-')),
          new RegExp(caseInsensitive('switch-')),
          new RegExp(caseInsensitive('foreach-')),
          new RegExp(caseInsensitive('for-')),
          new RegExp(caseInsensitive('while-')),
          new RegExp(caseInsensitive('do-')),
          new RegExp(caseInsensitive('data-')),
          new RegExp(caseInsensitive('parallel-')),
          new RegExp(caseInsensitive('inlinescript-')),
          new RegExp(caseInsensitive('sequence-')),
          new RegExp(caseInsensitive('using-')),
        ),
        repeat(
          choice(
            token.immediate(/[^\{\}\(\);,\|\&"'\s\r\n]+/),
            seq(token.immediate('"'), $._expandable_string_literal_immediate),
            token.immediate('""'),
            token.immediate('\'\''),
          ),
        ),
      ),

    command_elements: ($) => prec.right(repeat1($._command_element)),

    _command_element: ($) =>
      prec.right(
        choice(
          $.command_parameter,
          seq($._command_argument, optional($.argument_list)),
          $.redirection,
          $.stop_parsing,
        ),
      ),

    // Stop parsing is a token that end the parsing of command line
    command_argument_sep: ($) => prec.right(choice(repeat1(' '), ':')),

    // Adapt the grammar to have same behavior

    concatenated_command_argument: ($) =>
      prec.right(
        PREC.PARAM,
        choice(
          seq($.string_literal, repeat1($._immediate_command_argument_fragment)),
          seq(
            $._concatenated_command_argument_head,
            $._immediate_string_command_argument_fragment,
            repeat($._immediate_command_argument_fragment),
          ),
          seq(
            $._concatenated_command_argument_token_head,
            $._immediate_command_argument_expression_fragment,
            repeat($._immediate_command_argument_fragment),
          ),
        ),
      ),

    _concatenated_command_argument_head: ($) =>
      choice(
        $._array_literal_expression,
        $.expandable_bareword,
        alias($._command_argument_token, $.generic_token),
        $.escape_character,
      ),

    _concatenated_command_argument_token_head: ($) =>
      choice(
        alias($._command_argument_token, $.generic_token),
        $.expandable_bareword,
        $.escape_character,
      ),

    _immediate_command_argument_fragment: ($) =>
      choice(
        $._immediate_non_string_command_argument_fragment,
        $._immediate_string_command_argument_fragment,
      ),

    _immediate_command_argument_expression_fragment: ($) =>
      choice(
        alias($._immediate_variable, $.variable),
        alias($._immediate_sub_expression, $.sub_expression),
      ),

    _immediate_string_command_argument_fragment: ($) =>
      choice(
        alias($._immediate_expandable_string_literal, $.expandable_string_literal),
        alias($._immediate_verbatim_string_characters, $.verbatim_string_characters),
      ),

    expandable_bareword: ($) =>
      seq($.variable, alias($._expandable_bareword_tail, $.generic_token)),

    // The leading character must not start a distinct expression form such
    // as member access (`.`), element access (`[`), a script block (`{`),
    // another variable (`$`), a string literal (`"` / `'`), or a backtick
    // escape. Once the tail has started, only whitespace, pipes, and other
    // command terminators end it.
    _expandable_bareword_tail: ($) =>
      token.immediate(/[^\&\s\(\)\}\|;,\$\[\{\.\"\'`][^\&\s\(\)\}\|;,]*/),

    // A comma-separated list of command arguments that starts with a
    // bareword or expandable bareword. Used for commands like
    // `Select-Object PSPath, PSChildName` and `Get-Item $x\a-*, $y\b-*`.
