test/corpus/bareword_arguments.txt
===
Bareword argument with variable expansion and path suffix
===

New-Item $Path\Command

---

(program
  (statement_list
    (pipeline
      (pipeline_chain
        (command
          command_name: (command_name)
          command_elements: (command_elements
            (command_argument_sep)
            (expandable_bareword
              (variable)
              (generic_token))))))))

===
Bareword argument with variable expansion and dot-slash suffix
===

cmd $Root/sub/path.txt

---

(program
  (statement_list
    (pipeline
      (pipeline_chain
        (command
          command_name: (command_name)
          command_elements: (command_elements
            (command_argument_sep)
            (expandable_bareword
              (variable)
              (generic_token))))))))

===
Bareword argument list with commas
===

Select-Object PSPath, PSChildName

---

(program
  (statement_list
    (pipeline
      (pipeline_chain
        (command
          command_name: (command_name)
          command_elements: (command_elements
            (command_argument_sep)
            (bareword_argument_list
              (generic_token)
              (generic_token))))))))

===
Bareword argument list starting with bareword and mixing with variable
===

cmd bareword, $a, other

---

(program
  (statement_list
    (pipeline
      (pipeline_chain
        (command
          command_name: (command_name)
          command_elements: (command_elements
            (command_argument_sep)
            (bareword_argument_list
              (generic_token)
              (unary_expression
                (variable))
              (generic_token))))))))

===
Bareword argument list with expandable bareword after comma
===

cmd Name, $Path\Command

---

(program
  (statement_list
    (pipeline
      (pipeline_chain
        (command
          command_name: (command_name)
          command_elements: (command_elements
            (command_argument_sep)
            (bareword_argument_list
              (generic_token)
              (expandable_bareword
                (variable)
                (generic_token)))))))))

===
Variable element access in command argument position is not a bareword
===

cmd $a[0]

---

(program
  (statement_list
    (pipeline
      (pipeline_chain
        (command
          command_name: (command_name)
          command_elements: (command_elements
            (command_argument_sep)
            (unary_expression
              (element_access
                (variable)
                (unary_expression
                  (integer_literal
                    (decimal_integer_literal)))))))))))

===
Variable member access in command argument position is not a bareword
===

cmd $a.Prop

---

(program
  (statement_list
    (pipeline
      (pipeline_chain
        (command
          command_name: (command_name)
          command_elements: (command_elements
            (command_argument_sep)
            (unary_expression
              (member_access
                (variable)
                (member_name
                  (simple_name))))))))))

===
Expandable bareword followed by command parameter
===

New-ItemProperty $Path\Command -Name 'x' -Value 'y'

---

(program
  (statement_list
    (pipeline
      (pipeline_chain
        (command
          command_name: (command_name)
          command_elements: (command_elements
            (command_argument_sep)
            (expandable_bareword
              (variable)
              (generic_token))
            (command_argument_sep)
            (command_parameter)
            (command_argument_sep)
            (unary_expression
              (string_literal
                (verbatim_string_characters)))
            (command_argument_sep)
            (command_parameter)
            (command_argument_sep)
            (unary_expression
              (string_literal
                (verbatim_string_characters)))))))))

===
Multi-line pipeline inside array subexpression with bareword list
===

$childItems = @(Get-ChildItem -LiteralPath $ItemPath -Force:$Force |
                Where-Object {$_.PSIsContainer} | Select-Object PSPath, PSChildName)

---

(program
  (statement_list
    (pipeline
      (assignment_expression
        (left_assignment_expression
          (unary_expression
            (variable)))
        (assignment_operator)
        value: (assignment_value
          (pipeline_chain
            (unary_expression
              (array_expression
                statements: (statement_list
                  (pipeline
                    (pipeline_chain
                      (command
                        command_name: (command_name)
                        command_elements: (command_elements
                          (command_argument_sep)
                          (command_parameter)
                          (command_argument_sep)
                          (unary_expression
                            (variable))
                          (command_argument_sep)
                          (command_parameter)
                          (command_argument_sep)
                          (unary_expression
                            (variable))
                          (command_argument_sep)))
                      (command
                        command_name: (command_name)
                        command_elements: (command_elements
                          (command_argument_sep)
                          (unary_expression
                            (script_block_expression
                              (script_block
                                script_block_body: (script_block_body
                                  statement_list: (statement_list
                                    (pipeline
                                      (pipeline_chain
                                        (unary_expression
                                          (member_access
                                            (variable)
                                            (member_name
                                              (simple_name)))))))))))
                          (command_argument_sep)))
                      (command
                        command_name: (command_name)
                        command_elements: (command_elements
                          (command_argument_sep)
                          (bareword_argument_list
                            (generic_token)
                            (generic_token)))))))))))))))

===
Question mark after variable starts expandable bareword tail
===

Write-Output $foo?bar

---

(program
  (statement_list
    (pipeline
      (pipeline_chain
        (command
          command_name: (command_name)
          command_elements: (command_elements
            (command_argument_sep)
            (expandable_bareword
              (variable)
              (generic_token))))))))

================================================================================
Escape inside a bareword argument
================================================================================

Write-Host foo`nbar

--------------------------------------------------------------------------------

(program
  (statement_list
    (pipeline
      (pipeline_chain
        (command
          (command_name)
          (command_elements
            (command_argument_sep)
            (concatenated_command_argument
              (generic_token)
              (escape_character))))))))

================================================================================
Escaped space inside a bareword path
================================================================================

Get-Item C:\Program` Files\x

--------------------------------------------------------------------------------

(program
  (statement_list
    (pipeline
      (pipeline_chain
        (command
          (command_name)
          (command_elements
            (command_argument_sep)
            (concatenated_command_argument
              (generic_token)
              (escape_character))))))))
